# Modules

./: __init__.py  environment.yaml  install_python.ipynb  lib.py  notebook_template (MAC).ipynb  notebook_template.ipynb  profK_libraries.py  profK_statistics.py  requirements.txt  setup.py  statistics.py
implications_project/: .gitignore  LICENSE  README.md  pyproject.toml
implications_project/src/implications/: __init__.py  main.py
install/: install_python.ipynb
